disable/enable headers too when going out of view

pages get disabled when they go oout of view.
do the same thing for headers otherwise they'll stay
in the tab focus order

BUG:500840